--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-control">
-                <label for="title">Title</label>
+                <label for="title">Description</label>
                 <textarea name="description" id="description" rows="5"></textarea>
             </div>
 
