--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-control">
-                <label for="title">Title</label>
+                <label for="description">Description</label>
                 <textarea name="description" id="description" rows="5"><% if(editing) { %> <%= product.description %> <% } %></textarea>
             </div>
             <% if(editing) { %> 
